fix submit form jump bug

--- a/source/sass/components/templates.scss
+++ b/source/sass/components/templates.scss
@@ -71,13 +71,13 @@
 
 tag-tabset {
     display: flex;
+    justify-content: start;
     overflow: hidden;
     width: 100%;
     height: 100%;
 }
 tag-tab {
     width: 100%;
-    max-width: 100%;
     flex: 0 0 100%;
     transition-duration: 0.5s;
     left: 0;
