--- a/source/sass/components/webpages.scss
+++ b/source/sass/components/webpages.scss
@@ -5,7 +5,7 @@
 ********************************/
 .webpage {
     margin: -30px;
-    display: grid;
+    //display: grid;
     grid-template-columns: 1fr;
 
     @include mq-up(sm) {
@@ -22,6 +22,7 @@
         height: calc(100vh - (2 * var(--size--menu-max)));
         position: sticky;
         top: var(--size--menu-max);
+        height: max-content;
 
         .accordion {
             &--content {
